IM candidate window appears on the South-East corner of the display.

XMLWordPrintable

    • 7u6
    • b12
    • windows_7
    • Verified

        FULL PRODUCT VERSION :
        Reproducible with:
          1.7.0_06-b24
          1.7.0_07-b11
          1.7.0_09-b05
          1.7.0_10-b18
          1.7.0_11-b21
          1.7.0_13-b20
          1.7.0_15-b03
          1.7.0_17-b02
          1.7.0_21-b11
          1.7.0_25-b17
          1.7.0_40-ea-b29
          1.8.0-ea-b96

        Not reproducible with:
          1.6.0_45-b06
          1.7.0-b147
          1.7.0_01-b08
          1.7.0_02-b13
          1.7.0_03-b05
          1.7.0_04-b22
          1.7.0_05-b06

        It seems to be a regression of 1.7.0_06.

        ADDITIONAL OS VERSION INFORMATION :
        Windows 7 Ultimate 32 / 64bit sp1
        Windows 8 Pro 64bit


        EXTRA RELEVANT SYSTEM CONFIGURATION :
        IME (Japanese):
          Microsoft IME (Windows 7)
          Microsoft IME 2012 (Windows 8)

        Web Browser:
          Internet Explorer 10
          Google Chrome 27


        A DESCRIPTION OF THE PROBLEM :
        The candidate window shown from a JTextComponent on the Applet is always located on the South-East corner of the display.
        In multi-display environment, the candidate window appears on the South-East corner of the *FIRST* display.

        The same problem is reproducible with a JTextComponent shown using Eclipse SWT_AWT Bridge, so it seems that this problem occurs with a JTextComponent which is descendant of a WEmbeddedFrame.

        REGRESSION. Last worked in version 6u45

        STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
        1. Compile the attached java source, run as an Applet.
        2. Set input focus to JTextField or JTextArea on this Applet.
        3. Turn on the IME to change Japanese input mode.
        4. Type " densya " , and then press space key twice to show the candidate
            window.


        REPRODUCIBILITY :
        This bug can be reproduced always.

        ---------- BEGIN SOURCE ----------
        import java.awt.BorderLayout;
        import javax.swing.JPanel;
        import javax.swing.JApplet;
        import javax.swing.JTextField;
        import javax.swing.JScrollPane;
        import javax.swing.JTextArea;

        public class TestApplet extends JApplet {
        public void init() {
        this.setContentPane(createContentPane());
        this.setSize(300, 200);
        }
        private JPanel createContentPane() {
        JPanel contentPane = new JPanel();
        contentPane.setLayout(new BorderLayout());
        contentPane.add(new JTextField(), BorderLayout.NORTH);
        JScrollPane scrollPane = new JScrollPane();
        scrollPane.setViewportView(new JTextArea());
        contentPane.add(scrollPane, BorderLayout.CENTER);
        return contentPane;
        }
        }

        ---------- END SOURCE ----------

              Assignee:
              Andrew Brygin
              Reporter:
              Webbug Group
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: