8019990: IM candidate window appears on the South-East corner of the display

Reviewed-by: bagiras, serb